ST#712 - Customer Core Banking Changes