@@ -33,7 +33,6 @@
  */
 package com.pennant.backend.endofday.tasklet;
 
-import java.util.Date;
 import java.util.HashMap;
 import java.util.Map;
 
@@ -60,14 +59,12 @@ public class PartitioningMaster implements Partitioner {
 	@Override
 	public Map<String, ExecutionContext> partition(int gridSize) {
 		EventProperties eventProperties = EODUtil.EVENT_PROPS;
-		Date valueDate = null;
+
 		int threadCount = 0;
 
 		if (eventProperties.isParameterLoaded()) {
-			valueDate = eventProperties.getAppValueDate();
 			threadCount = eventProperties.getEodThreadCount();
 		} else {
-			valueDate = SysParamUtil.getAppValueDate();
 			threadCount = SysParamUtil.getValueAsInt(SMTParameterConstants.EOD_THREAD_COUNT);
 		}
 
@@ -81,11 +78,11 @@ public class PartitioningMaster implements Partitioner {
 		/* Update Running Count of Loans */
 		eodCustomerQueueDAO.handleFailures(new BatchJobQueue());
 
-		long loanCount = eodCustomerQueueDAO.getQueueCount(new BatchJobQueue());
+		long loanCount = eodCustomerQueueDAO.getQueueCount();
 		long totalCustomers = 0;
 
 		if (loanCount != 0) {
-			long noOfRows = Math.round((new Double(loanCount) / new Double(threadCount)));
+			long noOfRows = Math.round((Long.valueOf(loanCount) / Long.valueOf(threadCount)));
 
 			if (loanCount < threadCount) {
 				recordsLessThanThread = true;
